# remote-exec-mcp

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/remote-exec-admin/: Cargo.toml
crates/remote-exec-admin/src/: bootstrap.rs  certs.rs  cli.rs  main.rs
crates/remote-exec-admin/tests/: certs_issue.rs  dev_init.rs  dev_init_cli.rs
crates/remote-exec-broker/: Cargo.toml
crates/remote-exec-broker/src/: broker_tls.rs  broker_tls_disabled.rs  broker_tls_enabled.rs  client.rs  config.rs  daemon_client.rs  lib.rs  local_backend.rs  local_port_backend.rs  local_transfer.rs  logging.rs  main.rs  mcp_server.rs  port_forward.rs  request_context.rs  session_store.rs  startup.rs  state.rs
crates/remote-exec-broker/src/cli/: input.rs  mod.rs  output.rs
crates/remote-exec-broker/src/config/: tests.rs
crates/remote-exec-broker/src/daemon_client/: mod.rs  transfer.rs
crates/remote-exec-broker/src/local/: backend.rs  mod.rs  port.rs  transfer.rs
crates/remote-exec-broker/src/port_forward/: epoch.rs  events.rs  generation.rs  limits.rs  mod.rs  session.rs  side.rs  store.rs  supervisor.rs  tcp_bridge.rs  test_support.rs  timings.rs  tunnel.rs  udp_bridge.rs  udp_connectors.rs
crates/remote-exec-broker/src/port_forward/supervisor/: open.rs  reconnect.rs  tunnel_open.rs
crates/remote-exec-broker/src/port_forward/tcp_bridge/: tests.rs
crates/remote-exec-broker/src/tools/: exec.rs  exec_format.rs  exec_intercept.rs  image.rs  mod.rs  patch.rs  port_forward.rs  registry.rs  targets.rs  transfer.rs
crates/remote-exec-broker/src/tools/transfer/: codec.rs  endpoints.rs  format.rs  operations.rs
crates/remote-exec-broker/tests/: mcp_assets.rs  mcp_cli.rs  mcp_exec.rs  mcp_forward_ports.rs  mcp_forward_ports_cpp.rs  mcp_http.rs  mcp_tls.rs  mcp_transfer.rs  multi_target.rs
crates/remote-exec-broker/tests/mcp_exec/: intercept.rs  local.rs  malformed.rs  mod.rs  session.rs  verification.rs
crates/remote-exec-broker/tests/multi_target/: support.rs
crates/remote-exec-broker/tests/support/: certs.rs  fixture.rs  mod.rs  spawners.rs  streamable_http_child.rs  stub_daemon.rs  stub_daemon_exec.rs  stub_daemon_image.rs  stub_daemon_transfer.rs
crates/remote-exec-daemon/: Cargo.toml  build.rs
crates/remote-exec-daemon/src/: config.rs  host_path.rs  http_serve.rs  image.rs  lib.rs  logging.rs  main.rs  port_forward.rs  rpc_error.rs  server.rs  server_transport.rs  test_support.rs  tls.rs  tls_disabled.rs  tls_enabled.rs
crates/remote-exec-daemon/src/config/: environment.rs  mod.rs  tests.rs  yield_time.rs
crates/remote-exec-daemon/src/exec/: handlers.rs  locale.rs  mod.rs  output.rs  session.rs  shell.rs  store.rs  transcript.rs  winpty.rs
crates/remote-exec-daemon/src/exec/session/: capability.rs  child.rs  environment.rs  spawn.rs  windows.rs
crates/remote-exec-daemon/src/exec/shell/: common.rs  unix.rs  windows.rs
crates/remote-exec-daemon/src/http/: auth.rs  mod.rs  request_log.rs  routes.rs  version.rs
crates/remote-exec-daemon/src/patch/: engine.rs  matcher.rs  mod.rs  parser.rs  text_codec.rs  verify.rs
crates/remote-exec-daemon/src/transfer/: archive.rs  codec.rs  mod.rs
crates/remote-exec-daemon/src/transfer/archive/: codec.rs  entry.rs  exclude_matcher.rs  export.rs  import.rs  mod.rs  summary.rs
crates/remote-exec-daemon/tests/: exec_rpc.rs  health.rs  image_rpc.rs  patch_rpc.rs  port_forward_rpc.rs  tls.rs  transfer_rpc.rs  windows_pty_debug.rs
crates/remote-exec-daemon/tests/exec_rpc/: mod.rs  unix.rs  windows.rs
crates/remote-exec-daemon/tests/support/: assets.rs  certs.rs  fixture.rs  mod.rs  spawn.rs  spawn_tls.rs
crates/remote-exec-host/: Cargo.toml
crates/remote-exec-host/src/: error.rs  host_path.rs  ids.rs  image.rs  lib.rs  logging.rs  path_compare.rs  port_forward.rs  sandbox.rs  state.rs
crates/remote-exec-host/src/config/: environment.rs  mod.rs
crates/remote-exec-host/src/exec/: handlers.rs  mod.rs  output.rs  policy.rs  shell.rs  store.rs  support.rs  timing.rs  transcript.rs  winpty.rs
crates/remote-exec-host/src/exec/session/: child.rs  environment.rs  live.rs  mod.rs  pty_filter.rs  spawn.rs  windows.rs
crates/remote-exec-host/src/exec/shell/: common.rs  unix.rs  windows.rs
crates/remote-exec-host/src/exec/store/: tests.rs
crates/remote-exec-host/src/patch/: engine.rs  mod.rs  parser.rs  preflight.rs  text_codec.rs  verify.rs
crates/remote-exec-host/src/port_forward/: access.rs  active.rs  codec.rs  error.rs  frames.rs  limiter.rs  mod.rs  port_tunnel_tests.rs  session.rs  session_store.rs  tcp.rs  timings.rs  tunnel.rs  types.rs  udp.rs
crates/remote-exec-host/src/port_forward/tests/: mod.rs
crates/remote-exec-host/src/transfer/: mod.rs
crates/remote-exec-host/src/transfer/archive/: codec.rs  entry.rs  export.rs  import.rs  mod.rs  summary.rs
crates/remote-exec-host/tests/: path_sandbox_contracts.rs  transfer_semantics_contracts.rs
crates/remote-exec-pki/: Cargo.toml
crates/remote-exec-pki/src/: generate.rs  lib.rs  manifest.rs  spec.rs  write.rs
crates/remote-exec-pki/src/write/: bundle.rs  tests.rs  unix.rs  windows_acl.rs
crates/remote-exec-pki/tests/: ca_reuse.rs  dev_init_bundle.rs
crates/remote-exec-pki/tests/support/: inotify.rs
crates/remote-exec-proto/: Cargo.toml
crates/remote-exec-proto/src/: auth.rs  lib.rs  path.rs  port_forward.rs  port_tunnel.rs  public.rs  request_id.rs  rpc.rs  sandbox.rs  transfer.rs  wire.rs
crates/remote-exec-proto/src/port_tunnel/: codec.rs  meta.rs  mod.rs
crates/remote-exec-proto/src/public/: assets.rs  exec.rs  forward_ports.rs  transfer.rs
crates/remote-exec-proto/src/rpc/: error.rs  exec.rs  image.rs  patch.rs  target.rs  transfer.rs  warning.rs
crates/remote-exec-proto/src/rpc/transfer/: headers.rs  (+2 more)
crates/remote-exec-proto/src/sandbox/: authorize.rs  path_utils.rs  types.rs
crates/remote-exec-proto/tests/: contract_fixtures.rs  path_policy_contracts.rs
crates/remote-exec-test-support/: Cargo.toml
crates/remote-exec-test-support/src/: certs.rs  lib.rs  test_helpers.rs  transfer_archive.rs
(+372 files in other folders)
