[workspace]
members = [
  "crates/remote-exec-proto",
  "crates/remote-exec-daemon",
  "crates/remote-exec-broker",
  "crates/remote-exec-pki",
  "crates/remote-exec-admin",
]
exclude = [
  "winptyrs",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/chitao1234/remote-exec-mcp"
license = "Apache-2.0"
repository = "https://github.com/chitao1234/remote-exec-mcp"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
base64 = "0.22"
bytes = "1"
chardetng = "0.1"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
futures-util = "0.3"
http-body-util = "0.1"
http = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
gethostname = "1"
nix = { version = "0.28", default-features = false, features = ["user"] }
portable-pty = "0.9.0"
rand = "0.8"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "0.15.0", default-features = false, features = ["server"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
zstd = "0.13"
