[workspace]
members = [
  "crates/remote-exec-proto",
  "crates/remote-exec-daemon",
  "crates/remote-exec-broker",
  "crates/remote-exec-pki",
  "crates/remote-exec-admin",
]
exclude = [
  "winptyrs",
  "portable-pty",
]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/chitao1234/remote-exec-mcp"
license = "Apache-2.0"
repository = "https://github.com/chitao1234/remote-exec-mcp"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
base64 = "0.22"
bytes = "1"
chardetng = "1"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
futures-util = "0.3"
http-body-util = "0.1"
http = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
gethostname = "1"
nix = { version = "0.31", default-features = false, features = ["user"] }
os_pipe = "1.2"
portable-pty = { path = "portable-pty" }
rand = "0.10"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
rmcp = { version = "1", default-features = false, features = ["server"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "1.1"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
vte = "0.15"
zstd = "0.13"

[patch.crates-io]
# Local compatibility shims required to keep the Rust 2024 workspace building on 1.85.0.
darling = { path = "third_party/rust-patches/darling" }
darling_core = { path = "third_party/rust-patches/darling_core" }
darling_macro = { path = "third_party/rust-patches/darling_macro" }
process-wrap = { path = "third_party/rust-patches/process-wrap" }
rmcp = { path = "third_party/rust-patches/rmcp" }
