[package]
name = "remote-exec-admin"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
remote-exec-pki = { path = "../remote-exec-pki" }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
