[package]
name = "remote-exec-broker"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["broker-tls", "daemon-tls", "winpty"]
broker-tls = [
    "dep:rustls",
    "dep:rustls-pemfile",
    "reqwest/rustls-no-provider",
    "rmcp/reqwest-tls-no-provider",
]
daemon-tls = ["remote-exec-daemon/tls"]
winpty = ["remote-exec-daemon/winpty"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
remote-exec-daemon = { path = "../remote-exec-daemon", default-features = false }
remote-exec-proto = { path = "../remote-exec-proto" }
reqwest = { workspace = true }
rmcp = { workspace = true, features = ["client", "macros", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
gethostname = { workspace = true }
image = { workspace = true }
remote-exec-pki = { path = "../remote-exec-pki" }
tar = { workspace = true }
zstd = { workspace = true }

[[bin]]
name = "remote-exec"
path = "src/bin/remote_exec.rs"
