[package]
name = "remote-exec-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
gethostname = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
image = { workspace = true }
portable-pty = { workspace = true }
rand = { workspace = true }
remote-exec-proto = { path = "../remote-exec-proto" }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
winptyrs = { path = "../../winptyrs/crates/winptyrs" }

[dev-dependencies]
remote-exec-pki = { path = "../remote-exec-pki" }
reqwest = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "exec_rpc"
path = "tests/exec_rpc/mod.rs"
