[package]
name = "remote-exec-host"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["winpty"]
winpty = ["dep:winptyrs"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chardetng = { workspace = true }
encoding_rs = { workspace = true }
futures-util = { workspace = true }
gethostname = { workspace = true }
globset = { workspace = true }
http-body-util = { workspace = true }
image = { workspace = true }
os_pipe = { workspace = true }
portable-pty = { workspace = true }
rand = { workspace = true }
remote-exec-proto = { path = "../remote-exec-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vte = { workspace = true }
zstd = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
winptyrs = { path = "../../winptyrs/crates/winptyrs", optional = true }
