[package]
name = "remote-exec-pki"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
rcgen = { workspace = true, features = ["x509-parser"] }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
x509-parser = "0.18"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
