[package]
name = "remote-exec-proto"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
