[package]
name = "remote-exec-test-support"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
remote-exec-pki = { path = "../remote-exec-pki" }
tar = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
zstd = { workspace = true }
